// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вызывать onChange со сбросом фильтров при нажатии на reset 1`] = `
Object {
  "body_type": undefined,
  "call_result": undefined,
  "call_target": undefined,
  "callback": undefined,
  "category": undefined,
  "client_phone": undefined,
  "from": undefined,
  "generation": undefined,
  "mark": undefined,
  "model": undefined,
  "platforms": undefined,
  "price_from": undefined,
  "price_to": undefined,
  "salon_phone": undefined,
  "section": undefined,
  "tag": undefined,
  "text_domain": undefined,
  "text_query": undefined,
  "to": undefined,
  "transmission": undefined,
  "unique": undefined,
  "vin": undefined,
  "year_from": undefined,
  "year_to": undefined,
}
`;

exports[`должен сбрасывать фильтры в стейте на дефолтные при нажатии на reset 1`] = `
Object {
  "body_type": undefined,
  "call_result": "ALL_RESULT_GROUP",
  "call_target": "ALL_TARGET_GROUP",
  "callback": "ALL_SOURCE_GROUP",
  "category": "CATEGORY_UNKNOWN",
  "client_phone": undefined,
  "from": "2020-01-03",
  "generation": undefined,
  "mark": undefined,
  "model": undefined,
  "platforms": Array [],
  "price_from": undefined,
  "price_to": undefined,
  "salon_phone": undefined,
  "section": "SECTION_UNKNOWN",
  "tag": Array [],
  "text_domain": "ALL_DOMAIN",
  "text_query": "",
  "to": "2020-02-02",
  "transmission": undefined,
  "unique": "ALL_UNIQUE_GROUP",
  "vin": undefined,
  "year_from": undefined,
  "year_to": undefined,
}
`;
